--- a/app/src/main/res/layout/fragment_goals.xml
+++ b/app/src/main/res/layout/fragment_goals.xml
@@ -21,6 +21,7 @@
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
             style="@style/FloatingActionButtonTheme"
+            app:srcCompat="@drawable/plus"
             android:layout_gravity="bottom|right"
             app:fabSize="normal" />
 
