--- a/app/src/main/res/layout/fragment_tasks.xml
+++ b/app/src/main/res/layout/fragment_tasks.xml
@@ -23,6 +23,7 @@
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
             style="@style/FloatingActionButtonTheme"
+            app:srcCompat="@drawable/plus"
             android:layout_gravity="bottom|right"
             app:fabSize="normal"
             android:onClick="@{() -> viewModel.goAddNewTask()}"/>
