--- a/app/src/main/res/menu/frg_new_task_menu.xml
+++ b/app/src/main/res/menu/frg_new_task_menu.xml
@@ -8,4 +8,10 @@
         android:title="@string/edit"
         app:showAsAction="always" />
 
+    <item
+        android:id="@+id/action_delete_task"
+        android:icon="@drawable/delete"
+        android:title="@string/delete"
+        app:showAsAction="always" />
+
 </menu>
