--- a/app/src/main/res/layout/fragment_goals.xml
+++ b/app/src/main/res/layout/fragment_goals.xml
@@ -15,6 +15,7 @@
         android:layout_height="match_parent">
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyle_view"
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
