--- a/app/src/main/res/layout/fragment_blog.xml
+++ b/app/src/main/res/layout/fragment_blog.xml
@@ -41,7 +41,7 @@
                 android:id="@+id/blogRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:adapter="@{viewModel.blogListLiveData}"
+                app:adapter="@{viewModel.taskListLiveData}"
                 tools:listitem="@layout/item_blog_view" />
 
         </LinearLayout>
