--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -18,8 +18,8 @@
         <item
             android:id="@+id/navItemAbout"
             android:checked="true"
-            android:icon="@drawable/ic_info_24px"
-            android:title="@string/about" />
+            android:icon="@drawable/ic_tree_24px"
+            android:title="@string/goals" />
         <item
             android:id="@+id/navItemRateUs"
             android:checked="true"
@@ -28,8 +28,8 @@
         <item
             android:id="@+id/navItemFeed"
             android:checked="true"
-            android:icon="@drawable/ic_rss_symbol"
-            android:title="@string/feed" />
+            android:icon="@drawable/ic_calendar"
+            android:title="@string/timeSheet" />
         <item
             android:id="@+id/navItemLogout"
             android:checked="true"
