--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -25,7 +25,8 @@
             android:layout_height="wrap_content"
             android:text="@string/for_s"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textSize="36sp"/>
 
         <TextView
             android:id="@+id/textView3"
@@ -34,6 +35,7 @@
             android:text="@{viewModel.goalName}"
             android:layout_marginStart="16dp"
             tools:text="Aprender tudo sobre Biologia"
+            android:textSize="32sp"
             />
 
         <TextView
@@ -41,7 +43,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/it_s_time_to"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textSize="36sp"/>
 
         <TextView
             android:id="@+id/textView5"
@@ -50,7 +53,15 @@
             android:text="@{viewModel.taskDescription}"
             android:layout_marginStart="16dp"
             tools:text="Estudar plantas"
+            android:textSize="32sp"
             />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/stop_alarm"
+            android:onClick="@{() -> viewModel.setAlarm()}"/>
     </LinearLayout>
 
 </layout>
