--- a/app/src/main/res/layout/item_blog_empty_view.xml
+++ b/app/src/main/res/layout/item_blog_empty_view.xml
@@ -25,31 +25,11 @@
 
     </data>
 
-    <LinearLayout
-        android:id="@+id/linearLayoutView"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/imageViewEmpty"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_gravity="center"
-            app:srcCompat="@drawable/ic_rabbit" />
-
-        <TextView
-            android:id="@+id/tv_message"
-            style="@style/TextStyle.Title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="16dp"
-            android:gravity="center"
-            android:text="@string/empty_screen"
-            android:textColor="@color/gray" />
-
-    </LinearLayout>
+        <include layout="@layout/empty_view"/>
+    </FrameLayout>
 
 </layout>
