--- a/app/src/main/res/layout/fragment_goals.xml
+++ b/app/src/main/res/layout/fragment_goals.xml
@@ -31,7 +31,10 @@
                 android:id="@+id/recyle_view"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"/>
+
+            <include layout="@layout/empty_view"
+                android:id="@+id/emptyLayout"/>
 
         </LinearLayout>
 
