--- a/app/src/main/res/layout/fragment_tasks.xml
+++ b/app/src/main/res/layout/fragment_tasks.xml
@@ -35,6 +35,9 @@
 
             </androidx.recyclerview.widget.RecyclerView>
 
+            <include layout="@layout/empty_view"
+                android:id="@+id/emptyLayout"/>
+
 
         </LinearLayout>
 
