--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -39,7 +39,7 @@
             />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/alarmCheckBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/it_s_time_to"
