--- a/app/src/main/res/layout/widget_tasks_of_day.xml
+++ b/app/src/main/res/layout/widget_tasks_of_day.xml
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:layout_marginBottom="16dp"
-            android:text="@string/widget_empty"
+            android:text="@string/do_no_have_tasks_for_today"
             android:textColor="#ffffff"
             android:textSize="20sp"
             android:textStyle="bold" />
