Removes extra codes

--- a/app/src/main/res/layout/fragment_day.xml
+++ b/app/src/main/res/layout/fragment_day.xml
@@ -23,7 +23,7 @@
 
         <variable
             name="viewModel"
-            type="com.eccard.conquer.ui.feed.blogs.BlogViewModel" />
+            type="com.eccard.conquer.ui.timesheet.day.DayViewModel" />
 
     </data>
 
