--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -17,13 +17,13 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ui.feed.FeedActivity">
+    tools:context=".ui.timesheet.TimeSheetActivity">
 
     <data>
 
         <variable
             name="viewModel"
-            type="com.eccard.conquer.ui.feed.FeedViewModel" />
+            type="com.eccard.conquer.ui.timesheet.TimeSheetViewModel" />
     </data>
 
     <LinearLayout
