--- a/app/src/main/res/layout/dialog_add_goal.xml
+++ b/app/src/main/res/layout/dialog_add_goal.xml
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="@string/rate_us" />
+            android:text="@string/goal_name" />
 
         <EditText
             android:id="@+id/edt_goal_name"
