--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -29,32 +29,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:background="@drawable/bg_design"
+        android:background="@color/blue_black_light"
         android:orientation="vertical"
         android:padding="16dp">
-
-        <com.eccard.conquer.ui.custom.RoundedImageView
-            android:id="@+id/iv_profile_pic"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:layout_marginTop="40dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/ic_mindorks_logo" />
-
-        <TextView
-            android:id="@+id/tv_name"
-            style="@style/TextStyle.Title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="@{viewModel.userName}" />
-
-        <TextView
-            android:id="@+id/tv_email"
-            style="@style/TextStyle.Title.Sub"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{viewModel.userEmail}" />
 
     </LinearLayout>
 
