--- a/app/src/main/res/layout/fragment_new_task.xml
+++ b/app/src/main/res/layout/fragment_new_task.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -66,7 +65,7 @@
             android:layout_marginTop="32dp"
             android:layout_marginEnd="8dp"
             android:ems="5"
-            android:hint="08:00"
+            android:hint="@string/time_hint"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/textView3"
@@ -122,7 +121,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:text="Task Day"
+            android:text="@string/task_day"
             app:layout_constraintBottom_toBottomOf="@+id/spinnerDayOfWeekend"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/spinnerDayOfWeekend" />
